--- a/Source/collaborative-music-player/pom.xml
+++ b/Source/collaborative-music-player/pom.xml
@@ -11,5 +11,15 @@
       <artifactId>spark-core</artifactId>
       <version>2.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.1.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.37</version>
+    </dependency>
   </dependencies>
 </project>
