--- a/Source/collaborative-music-player/pom.xml
+++ b/Source/collaborative-music-player/pom.xml
@@ -21,5 +21,10 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.37</version>
     </dependency>
+    <dependency>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-template-freemarker</artifactId>
+      <version>2.3</version>
+    </dependency>
   </dependencies>
 </project>
