--- a/Source/collaborative-music-player/pom.xml
+++ b/Source/collaborative-music-player/pom.xml
@@ -26,5 +26,17 @@
       <artifactId>spark-template-freemarker</artifactId>
       <version>2.3</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-chrome-driver</artifactId>
+      <version>2.53.0</version>
+      <scope>test</scope>
+    </dependency>  
   </dependencies>
 </project>
