Added rough implementation of user page.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Source/.metadata
 Source/collaborative-music-player/.settings
 Source/.recommenders
 Source/collaborative-music-player/target/*
+.metadata/*
+Source/collaborative-music-player/.metadata/*
